# rtd-test-2

./: .editorconfig  .gitignore  .gitlab-ci.yml  .justfile  .readthedocs.yml  LICENSE  README.md  pyproject.toml
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst
docs/source/_templates/: class-without-init.rst  class.rst  data-class.rst
src/main/myrtdtestpkg/: __init__.py
src/test/myrtdtestpkg_test/: __init__.py
