# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
#                                                                             #
#   Copyright (c) 2024 Avantia Law Limited (Avantia). All Rights Reserved.    #
#                                                                             #
#   IT IS STRICTLY PROHIBITED TO USE, COPY, MODIFY, OR DISTRIBUTE THIS        #
#   SOFTWARE IN SOURCE OR BINARY FORMS FOR ANY PURPOSE WITHOUT EXPRESS        #
#   WRITTEN PERMISSION OF AVANTIA.                                            #
#                                                                             #
#   IN NO EVENT SHALL AVANTIA BE LIABLE TO ANY PARTY FOR DIRECT, INDIRECT,    #
#   SPECIAL, INCIDENTAL, OR CONSEQUENTIAL DAMAGES, INCLUDING LOST PROFITS,    #
#   ARISING OUT OF THE USE OF THIS SOFTWARE AND ITS DOCUMENTATION, EVEN IF    #
#   AVANTIA HAS BEEN ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.               #
#                                                                             #
#   AVANTIA SPECIFICALLY DISCLAIMS ANY WARRANTIES, INCLUDING, BUT NOT         #
#   LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR     #
#   A PARTICULAR PURPOSE. AVANTIA HAS NO OBLIGATION TO PROVIDE MAINTENANCE,   #
#   SUPPORT, UPDATES, ENHANCEMENTS, OR MODIFICATIONS.                         #
#                                                                             #
# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #


[tool.poetry]
name = "myrtdtestpkg"
version = "0.0.0"
description = "Just a test."
repository = "https://github.com/phohenecker/rtd-test-2"
authors = ["Patrick Hohenecker <patrick@avantia.ai>"]
readme = "README.md"
packages = [{include = "myrtdtestpkg", from = "src/main"}]
license = "See license in LICENSE"






[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"
assertpy = "^1.1"
coverage = "^7.4.1"
setuptools = "^69.1.0"
sphinx-rtd-theme = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
